# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
dokumentaatio/misc/: bensatankki_ja_moottori.txt  luokkakaavio.txt  package_diagram.drawio
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  .coveragerc  pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/htmlcov/: index.html  src_maksukortti_py.html  status.json
laskarit/viikko2/maksukortti/src/: index.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko3/: hsl.txt  monopoli_luokkakaavio.txt
src/: build.py  index.py
src/entities/: bar.py  clef.py  key_signature.py  measure.py  notation.py  note.py  rest.py  score.py  staff.py  time_signature.py
src/repositories/: score_repository.py
src/services/: file_service.py  playback_service.py  score_service.py
src/tests/: conftest.py  idk_test.py
src/tests/entities/: measure_test.py  notation_test.py  score_test.py  staff_test.py
src/tests/repositories/: score_repository_test.py
src/tests/services/: file_service_test.py  score_service_test.py
src/ui/: main_view.py  navigation.py  options.py  ribbon.py  score_view.py  startup_options.py  ui.py  workspace.py
src/ui/navigation_options/: notation_options.py  note_input_options.py  options.py  signatures_options.py  tools_options.py
src/utils/: colors.py  constants.py
(+3 files in other folders)
